@@ -22,7 +22,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.Set;
-import org.apache.commons.io.FileUtils;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.ClassRule;
@@ -69,7 +68,7 @@ public class AtomicFileWriterTest {
     @Before
     public void setUp() throws IOException {
         af = tmp.newFile();
-        FileUtils.writeStringToFile(af, PREVIOUS, Charset.defaultCharset());
+        Files.writeString(af.toPath(), PREVIOUS, Charset.defaultCharset());
         afw = new AtomicFileWriter(af.toPath(), Charset.defaultCharset());
     }
 
@@ -119,7 +118,7 @@ public class AtomicFileWriterTest {
 
         // Then
         assertEquals(expectedContent.length() + 3, Files.size(af.toPath()));
-        assertEquals(expectedContent + "hey", FileUtils.readFileToString(af, Charset.defaultCharset()));
+        assertEquals(expectedContent + "hey", Files.readString(af.toPath(), Charset.defaultCharset()));
     }
 
     @Test
@@ -132,14 +131,14 @@ public class AtomicFileWriterTest {
 
         // Then
         assertTrue(Files.notExists(afw.getTemporaryPath()));
-        assertEquals(PREVIOUS, FileUtils.readFileToString(af, Charset.defaultCharset()));
+        assertEquals(PREVIOUS, Files.readString(af.toPath(), Charset.defaultCharset()));
     }
 
     @Test
     public void indexOutOfBoundsLeavesOriginalUntouched() throws Exception {
         // Given
         assertThrows(IndexOutOfBoundsException.class, () -> afw.write(expectedContent, 0, expectedContent.length() + 10));
-        assertEquals(PREVIOUS, FileUtils.readFileToString(af, Charset.defaultCharset()));
+        assertEquals(PREVIOUS, Files.readString(af.toPath(), Charset.defaultCharset()));
     }
 
     @Test
